# LearnESP32

./: README.md
10_memory/: CMakeLists.txt
14_UART/: .gitignore  CMakeLists.txt
17_sleeping/: CMakeLists.txt
17_sleeping/main/: CMakeLists.txt  main.c  main.h
17_sleeping/main/deep_sleep_example/: deep_sleep_example.c  deep_sleep_example.h
17_sleeping/main/hibernation_example/: hibernation_example.c  hibernation_example.h
17_sleeping/main/light_sleep_example/: light_sleep_example.c  light_sleep_example.h
19_REST/: CMakeLists.txt  README.md  sdkconfig.old
1_hello_world/: .gitignore
20_Internet_server/: CMakeLists.txt  README.md  sdkconfig.old
21_Website_on_chip/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
22_MQTT/: CMakeLists.txt  README.md
23_ESP-NOW/: CMakeLists.txt  README.md
2_logging/: CMakeLists.txt  sdkconfig.old
3_delays/: CMakeLists.txt
4_random_numbers/: CMakeLists.txt
5_blinkey/: CMakeLists.txt
6_keyboard_input/: CMakeLists.txt
7_components/: CMakeLists.txt
8_FreeRTOS/: CMakeLists.txt
8_FreeRTOS/main/: CMakeLists.txt  main.c  main.h
8_FreeRTOS/main/RTOS_timer_example/: RTOS_timer_example.c  RTOS_timer_example.h
8_FreeRTOS/main/event_group_example/: event_group_example.c  event_group_example.h
8_FreeRTOS/main/mutex_example/: mutex_example.c  mutex_example.h
8_FreeRTOS/main/queue_example/: queue_example.c  queue_example.h
8_FreeRTOS/main/semaphore_example/: semaphore_example.c  semaphore_example.h
8_FreeRTOS/main/task_notification_example/: task_notification_example.c  task_notification_example.h
(+127 files in other folders)
